Question 2.1 - still WIP

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -215,9 +215,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import string\n",
+    "import json\n",
+    "from operator import itemgetter\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import SnowballStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,9 +249,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "df = pd.read_table(\"../shared_stuff/tsv_files/total_pages.tsv\",\n",
+    "                       delimiter = \"\\t\",\n",
+    "                       header = \"infer\",\n",
+    "                       on_bad_lines = \"skip\") # fix line 16473"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://towardsdatascience.com/text-preprocessing-with-nltk-9de5de891658?gi=ab3fb4cef5b4\n",
+    "\n",
+    "# IMPROVE!!!\n",
+    "# (I think it's too aggressive)\n",
+    "\n",
+    "def preprocess(text, stemmer):\n",
+    "    \n",
+    "    text = str(text)\n",
+    "    \n",
+    "    punct = string.punctuation + \"...\" + \"''\" + \"``\" + '\"\"' \n",
+    "    stops = stopwords.words(\"english\")\n",
+    "    \n",
+    "    other_suffixes = \"'s\" + \"n't\"\n",
+    "    \n",
+    "    tokens = word_tokenize(text)\n",
+    "    \n",
+    "    # also remove anything with numbers\n",
+    "    \n",
+    "    return [stemmer.stem(w) for w in tokens \n",
+    "            if w not in stops and w not in punct and w not in other_suffixes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = SnowballStemmer(\"english\")\n",
+    "\n",
+    "df['synopsis_clean'] = df.apply(lambda row: preprocess(row['synopsis'], stemmer), \n",
+    "                                axis = 'columns')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,9 +320,142 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def create_vocab(corpus):\n",
+    "    \"\"\"\n",
+    "    This function creates a set of unique\n",
+    "    and preprocessed words from a corpus\n",
+    "    \n",
+    "    Arguments\n",
+    "        corpus : pandas df column or list-like\n",
+    "    \n",
+    "    Returns\n",
+    "        vocab  : set with preprocessed words from the corpus \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    vocab = set()\n",
+    "    \n",
+    "    for doc in corpus:\n",
+    "        vocab.update(set(doc))\n",
+    "\n",
+    "    return {word:idx for idx, word in enumerate(vocab)}\n",
+    "    \n",
+    "\n",
+    "def save_dict_to_file(dct, filename):\n",
+    "    \"\"\"\n",
+    "    This function saves a dictionary \n",
+    "    to an external JSON file\n",
+    "    \n",
+    "    Arguments\n",
+    "        dct       : dictionary\n",
+    "        filename  : name of the file\n",
+    "        \n",
+    "    Returns\n",
+    "        void\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    with open(filename, \"w\") as file:\n",
+    "        json.dump(dct, file)\n",
+    "        \n",
+    "\n",
+    "def read_dict_from_file(filename):\n",
+    "    \"\"\"\n",
+    "    This function reads a dictionary\n",
+    "    from an external JSON file\n",
+    "        \n",
+    "    Arguments\n",
+    "        filename : name of the file\n",
+    "    \n",
+    "    Returns\n",
+    "        dct : dictionary with the contents of 'filename'\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(filename, \"r\") as file:\n",
+    "        dct = json.loads(file.read())\n",
+    "\n",
+    "    return dct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only execute this cell the first time or \n",
+    "# when the preprocessing changes!\n",
+    "\n",
+    "vocab = create_vocab(df['synopsis_clean'])\n",
+    "\n",
+    "save_dict_to_file(vocab, \"vocabulary.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = read_dict_from_file(\"vocabulary.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_inv_idx(corpus, vocab):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This functions creates an inverted index list\n",
+    "    given a corpus of documents and a vocabulary\n",
+    "    \n",
+    "    Arguments\n",
+    "        corpus  : pandas df column or list-like\n",
+    "        vocab   : dictionary of all the words in the corpus\n",
+    "    \n",
+    "    Returns\n",
+    "        inv_idx : dictionary with the words as referenced in 'vocab' as keys \n",
+    "                  and the lists of the documents each word is in as values       \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    inv_idx = {}\n",
+    "    \n",
+    "    for idx, word in zip(vocab.values(), vocab.keys()):\n",
+    "        inv_idx[idx] = [doc_id for doc_id, doc in enumerate(corpus) if word in doc]\n",
+    "    \n",
+    "    return inv_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only execute this cell the first time or \n",
+    "# when the preprocessing/vocabulary change!\n",
+    "\n",
+    "inv_idx = create_inv_idx(df['synopsis_clean'], vocab)\n",
+    "\n",
+    "save_dict_to_file(inv_idx, \"inv_idx.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The keys of the dict we get are str, not int like when we created it\n",
+    "# I don't think it's necessary, but should we parse them when we read the json?\n",
+    "inv_idx = read_dict_from_file(\"inv_idx.json\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,9 +483,166 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def parse_query(query, vocab):\n",
+    "    \"\"\"\n",
+    "    This functions converts the list of words\n",
+    "    input by the user into the list of the IDs\n",
+    "    the words are saved as in the vocabulary\n",
+    "    \n",
+    "    Arguments\n",
+    "        query : list of words\n",
+    "        vocab : vocabulary of words with the words as keys\n",
+    "                and their IDs as values\n",
+    "    Returns\n",
+    "        list of the IDs of the words in the query\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return list(map(lambda word: vocab[word], query))\n",
+    "\n",
+    "\n",
+    "def get_results(query):\n",
+    "    \"\"\"\n",
+    "    This functions finds the documents all the words\n",
+    "    in the query are in.\n",
+    "    \n",
+    "    It finds them in three steps:\n",
+    "    1. creates a list of docs each word is in from the inverted index\n",
+    "    2. converts that list into a set\n",
+    "    3. intersects all those sets into a single set\n",
+    "       \n",
+    "    Arguments\n",
+    "        query : list of words as parsed by 'parse_query'\n",
+    "    Returns\n",
+    "        set with the documents that contain all the words in the query\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return set.intersection(*[set(inv_idx[str(q)]) for q in query])\n",
+    "\n",
+    "\n",
+    "def get_df_entries(df, results,\n",
+    "                   url_file = \"../shared_stuff/url_list.txt\"):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This function filters the dataset so it only shows\n",
+    "    the rows which match the results, and adds a new column\n",
+    "    with the URL for the anime of each row.\n",
+    "    \n",
+    "    Arguments\n",
+    "        df       : pandas dataframe\n",
+    "        results  : set with the row indices to be filtered out\n",
+    "        url_file : external file with the URLs for each of the rows in df\n",
+    "    \n",
+    "    Returns\n",
+    "        df : filtered pandas dataframe\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if not results:\n",
+    "        print(\"No results!\")\n",
+    "        return\n",
+    "    \n",
+    "    with open(url_file, 'r') as file:\n",
+    "        url_list = file.read().split(\"\\n\")\n",
+    "\n",
+    "    df = df.iloc[[*results]]\n",
+    "    df = df[[\"title\", \"synopsis\"]]\n",
+    "    df = df.rename(columns = {\"title\": \"animeTitle\", \n",
+    "                              \"synopsis\": \"animeDescription\"})\n",
+    "    \n",
+    "    df['animeUrl'] = itemgetter(*results)(url_list)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " cowboy bebop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animeTitle</th>\n",
+       "      <th>animeDescription</th>\n",
+       "      <th>animeUrl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1866</th>\n",
+       "      <td>Cowboy Bebop: Yose Atsume Blues (Cowboy Bebop ...</td>\n",
+       "      <td>Due to the violence portrayed in the Cowboy Be...</td>\n",
+       "      <td>https://myanimelist.net/anime/33028/Danganronp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Cowboy Bebop</td>\n",
+       "      <td>In the year 2071, humanity has colonized sever...</td>\n",
+       "      <td>https://myanimelist.net/anime/1/Cowboy_Bebop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             animeTitle  \\\n",
+       "1866  Cowboy Bebop: Yose Atsume Blues (Cowboy Bebop ...   \n",
+       "31                                         Cowboy Bebop   \n",
+       "\n",
+       "                                       animeDescription  \\\n",
+       "1866  Due to the violence portrayed in the Cowboy Be...   \n",
+       "31    In the year 2071, humanity has colonized sever...   \n",
+       "\n",
+       "                                               animeUrl  \n",
+       "1866  https://myanimelist.net/anime/33028/Danganronp...  \n",
+       "31         https://myanimelist.net/anime/1/Cowboy_Bebop  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# TODO: ERROR HANDLING!\n",
+    "# (i.e. word not in the vocab, anything else (?))\n",
+    "\n",
+    "query = parse_query(input().split(), vocab)\n",
+    "\n",
+    "results = get_results(query)\n",
+    "\n",
+    "df_entries = get_df_entries(df, results)\n",
+    "\n",
+    "display(df_entries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,9 +671,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# bozza\n",
+    "\n",
+    "# def create_inv_idx(corpus, vocab):\n",
+    "#     \n",
+    "#     inv_idx = {}\n",
+    "#     \n",
+    "#     for doc_num, doc in enumerate(corpus):\n",
+    "#         cnt = Counter(doc)\n",
+    "#         for word, idx in zip(vocab.keys(), vocab.values()):\n",
+    "#             inv_idx[idx] = (cnt[word])\n",
+    "#     \n",
+    "#     return inv_idx"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,7 +795,7 @@
    "hash": "c0e40e7c7a66e87c69eaa7498d7778a1d8fa6b3e422091d0b3e8dafd8f730247"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('fds': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -436,10 +809,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.7.11"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
