Fixed bad comment

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -334,7 +334,8 @@
     "        corpus : pandas df column or list-like\n",
     "    \n",
     "    Returns\n",
-    "        vocab  : set with preprocessed words from the corpus \n",
+    "        vocab  : dictionary with the words as keys\n",
+    "                 and a unique integer for each as values\n",
     "    \"\"\"\n",
     "    \n",
     "    vocab = set()\n",
