Improved preprocessing + some error handling

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,8 @@
     "    \n",
     "    tokens = word_tokenize(text)\n",
     "        \n",
-    "    return [stemmer.stem(w) for w in tokens if w not in bad_words() and not has_digits(w)]"
+    "    return [stemmer.stem(w) for w in tokens \n",
+    "            if w not in bad_words() and not has_digits(w)]"
    ]
   },
   {
@@ -585,7 +586,6 @@
     "\n",
     "def get_df_entries(df, results,\n",
     "                   url_file = \"../shared_stuff/url_list.txt\"):\n",
-    "    \n",
     "    \"\"\"\n",
     "    This function filters the dataset so it only shows\n",
     "    the rows which match the results, and adds a new column\n",
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
