--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,6 +407,87 @@
    "source": [
     "array=[3,4,5,60,4]\n",
     "algoritmo(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "caso_limite = [50, 65, 90, 60, 35, 10, 15, 25]\n",
+    "print(algoritmo(caso_limite))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 90, 35, 25]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def recursive_algo(arr):\n",
+    "    if len(arr)<2:\n",
+    "        return arr\n",
+    "\n",
+    "    return(max(recursive_algo(arr[1:]), [arr[0]] + recursive_algo(arr[2:]), key=sum))\n",
+    "\n",
+    "recursive_algo(caso_limite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 massimo fra 65 50 : n= 65 a= 0 b= 50\n",
+      "90 massimo fra 140 65 : n= 140 a= 50 b= 65\n",
+      "60 massimo fra 125 140 : n= 140 a= 65 b= 140\n",
+      "35 massimo fra 175 140 : n= 175 a= 140 b= 140\n",
+      "10 massimo fra 150 175 : n= 175 a= 140 b= 175\n",
+      "15 massimo fra 190 175 : n= 190 a= 175 b= 175\n",
+      "25 massimo fra 200 190 : n= 200 a= 175 b= 190\n",
+      "[50, 65, 90, 35, 15, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def algoritmo_leo(array):\n",
+    "    a=0\n",
+    "    b=array[0]\n",
+    "    step=[array[0]]\n",
+    "    for elem in array[1:]:\n",
+    "        n=max(a+elem,b)\n",
+    "        if a+elem>b:\n",
+    "            step.append(elem)\n",
+    "        print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
+    "        a=b\n",
+    "        b=n\n",
+    "    return b,step\n",
+    "\n",
+    "print(algoritmo_leo(caso_limite)[1])"
    ]
   },
   {
@@ -436,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
