Minor minor fix

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -602,7 +602,7 @@
     "    \n",
     "    if not results:\n",
     "        print(\"No results!\")\n",
-    "        return\n",
+    "        return pd.DataFrame()\n",
     "    \n",
     "    with open(url_file, 'r') as file:\n",
     "        url_list = file.read().split(\"\\n\")\n",
@@ -648,7 +648,7 @@
     "\n",
     "    df_entries = get_df_entries(df, results)\n",
     "\n",
-    "    if df_entries: \n",
+    "    if df_entries.size != 0: \n",
     "        display(df_entries)"
    ]
   },
